Fix Java 17 strong-encapsulation errors without --add-opens
Java 17 (JEP 403) makes ClassLoader.defineClass() inaccessible via
reflection, breaking the approach Javassist previously used to load
patched bytecode.  Four interrelated problems needed fixing:

1. Patching in a LegacyClassLoader (main use case)
   Previously, CodeHacker called the Javassist legacy toClass() path,
   which reflected into ClassLoader.defineClass() — forbidden on
   Java 17+.
   Fix (LegacyClassLoader, CodeHacker): Add storePatchedClass() to
   LegacyClassLoader.  CodeHacker now pre-registers the patched bytes;
   LegacyClassLoader.findClass() then calls the public defineClass()
   method directly, with no reflection needed.

2. Patching in the system / app classloader
   Fix (CodeHacker): Add a PACKAGE_SEEDS map that holds one simple,
   unpatched seed class per patchable package.  loadClass() calls
   CtClass.toClass(seed), which Javassist implements via
   MethodHandles.privateLookupIn(seed) + Lookup.defineClass() — a
   public API available since Java 9 that requires no --add-opens.
   A LOOKUP_DEFINE_AVAILABLE guard disables this path on Java 8,
   where toClass(ClassLoader, ProtectionDomain) still works fine.

3. Java agent fallback
   Fix (JavaAgent): Add a PatchingTransformer (ClassFileTransformer)
   and a storePatchedClass() entry point.  When running under the
   -javaagent and no seed is available, CodeHacker hands the patched
   bytes to the transformer; the JVM itself handles class definition
   during the next class-load — no reflection required.

4. Eager class loading defeating the patches
   Two separate eager-loading bugs caused LinkageError "duplicate class
   definition":

   a) LegacyClassLoader's static initializer previously held hard
      Class<?> references to EssentialLegacyHooks and
      HeadlessGenericDialog.  Merely triggering LegacyClassLoader
      initialisation (e.g. via instanceof) loaded those classes into the
      system classloader before CodeHacker 